Implemented questionnaire & rendered

--- a/src/template/team.html
+++ b/src/template/team.html
@@ -8,7 +8,9 @@
             <h1 class="text-center">My Team</h1>
         </div>
         <div class="container-fluid row align-content-center justify-content-center">
-            {{my_team}}
+        {{#myTeam}}
+            {{member}}
+        {{/myTeam}}
         </div>
     </body>
 </html>
